tests/escript/scripts/escript_invalid_unexpected_indent.py.out
Error in script: At line 2, IndentationError: unexpected indent