tests/escript/scripts/escript_invalid_unexpected_indent.py
# python3;failure
   print("Hello")  # Unexpected indentation